--- a/style.css
+++ b/style.css
@@ -1,29 +1,61 @@
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
 * {
 	box-sizing: border-box;
 }
+
 body {
-	background-color: black;
+	background-color: white;
 }
 header {
 	display: inline-flex;
 }
 a {
-	color: white;
+	color: black;
 	text-decoration: none;
 }
 .navbar {
 	display: inline-flex;
 	font-size: 24px;
+	list-style: none;
 }
 .navbarli {
 	font-family: 'Alfa Slab One', cursive;
 	padding: 0 40px;
 }
+.tab {
+	background-color: grey;
+}
+.tabLinks {
+	width: 10%;
+	background-color: grey;
+ 	border: none;
+ 	transition: .3s;
+ 	font-size: 1em;
+}
+.tabLinks:hover {
+	background-color: #c7c7c7;
+}
+.tabLinks.active {
+	background-color: #c7c7c7;
+}
+.tabContent {
+	display:none;
+	height: 250px;
+}
 .tabContent.active {
-   background-color: white;
-   z-index: 0;
-   border-right: 0px;
-   border-left: 0px;
-   height: 110px;
-   bottom: 0px;
-   overflow: hidden;
+	transition: all 3s ease;
+	display: block;
+	background-color: white;
+}
+.main {
+	margin-top: 0;
+}
+
+
