made the project responsive

--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ a {
 .tabContent {
 	position: relative;
 	display:none;
-	height: 250px;
 }
 .tabContent.active {
 	transition: all 3s ease;
@@ -58,10 +57,11 @@ a {
 .innerContainer {
 	margin: 0 auto;
 	position: relative;
-	width: 15%;
+	width: 30%;
 	padding: 2%;
 	border: 1px solid gray;
 	box-shadow: 4px 10px 6px 0px gray;
+	font-size: 30px;
 }
 h4 {
 	margin-bottom:0;
@@ -81,19 +81,12 @@ h4 {
 	height: 50%;
 	margin: 0 auto;
 }
-.coinLogo1 {
-	position: absolute;
-	width: 7%;
-	left: 47%;
-	right: 50%;
-	top: 25%;
+*/.coinLogo1 {
+	width: 100%;
 }
 .coinLogo2 {
-	position: absolute;
-	width: 13%;
-	left: 44%;
-	right: 50%;
-}*/
+	width: 100%;
+}
 /*.currentPrice {
 	position: absolute;
 	left: 46.1%;
@@ -103,5 +96,52 @@ h4 {
 .main {
 	margin-top: 0;
 }
-@media and 
+@media screen and (max-width: 2000px) and (min-width: 961px) {
+	.lg {
+		display: none;
+	}
+	.innerContainer {
+		width: 30%;
+	}
+}
+@media screen and (max-width: 960px) and (min-width: 586px) {
+	.xl {
+		display: none;
+	}
+	.innerContainer{
+		width: 60%;
+	}
+}
+
+@media screen and (max-width: 586px) and (min-width: 318px) {
+	header {
+		display: none;
+	}
+	.lg{
+		display: none;
+	}
+	.innerContainer {
+		width:50%;
+		font-size: 20px;
+	}
+	.tabLinks {
+		width: 100%;
+	}
+}
+@media screen and (max-width: 318px) and  (min-width: 100px) {
+	header {
+		display: none;
+	}
+	.lg{
+		display: none;
+	}
+	.innerContainer {
+		width:100%;
+		font-size: 20px;
+	}
+	.tabLinks {
+		width: 100%;
+	}
+}
+
 
